temporary fixed the layout shift

--- a/src/style.css
+++ b/src/style.css
@@ -41,6 +41,7 @@
   *,
   :after,
   :before {
+    border-width: 1px;
     box-sizing: border-box;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
